tests/compilefail44.out
[1mtests/compilefail44.pas:11:19: [0m[1m[91merror:[0m Type integer not compatible with type fruit in 'for' statement
    11 | 	for k := 0 to peach do begin